--- a/index.html
+++ b/index.html
@@ -9,37 +9,48 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <title>Interactive rating component</title>
 </head>
 
 <body>
 
-  <div role="main" id="main" class="container-fluid">
-    <div class="card mb-3 mx-auto">
-      <div class="card-body">
-        <h5 class="card-title">How did we do?</h5>
-        <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated to
-          help us improve our offering!</p>
-
-        <p>1 2 3 4 5</p>
-
-        <button type="button" class="btn btn-primary">Submit</button>
-
+  <div class="container-fluid d-flex justify-content-center align-items-center">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card rounded-5">
+          <div class="card-body">
+            <span class="badge bg-secondary rounded-5 star-icon"><img src="/images/icon-star.svg" alt="star icon"></span>
+            <h5 class="card-title">How did we do?</h5>
+            <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated to
+              help us improve our offering!</p>
+  
+            <p class="numbers-for-rating">
+              <span class="badge bg-secondary rounded-5">1</span>
+              <span class="badge bg-secondary rounded-5">2</span>
+              <span class="badge bg-secondary rounded-5">3</span>
+              <span class="badge bg-secondary rounded-5">4</span>
+              <span class="badge bg-secondary rounded-5">5</span>
+            </p>
+            
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary border border-0 rounded-5" type="button">SUBMIT</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
+  
+
   <!-- Thank you state start -->
 
-  You selected
-  <!-- Add rating here --> out of 5
+  <!--You selected -->
+  <!-- Add rating here  out of 5 -->
 
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support,
-  don’t hesitate to get in touch!
+  <!--Thank you! We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!-->
 
   <!-- Thank you state end -->
 
