--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Interactive rating component</title>
 </head>
@@ -21,11 +24,12 @@
       <div class="col-md-12">
         <div class="card rounded-5">
           <div class="card-body">
-            <span class="badge bg-secondary rounded-5 star-icon"><img src="/images/icon-star.svg" alt="star icon"></span>
+            <span class="badge bg-secondary rounded-5 star-icon"><img src="/images/icon-star.svg"
+                alt="star icon"></span>
             <h5 class="card-title">How did we do?</h5>
             <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated to
               help us improve our offering!</p>
-  
+
             <p class="numbers-for-rating">
               <span class="badge bg-secondary rounded-5">1</span>
               <span class="badge bg-secondary rounded-5">2</span>
@@ -33,7 +37,7 @@
               <span class="badge bg-secondary rounded-5">4</span>
               <span class="badge bg-secondary rounded-5">5</span>
             </p>
-            
+
             <div class="d-grid gap-2">
               <button class="btn btn-primary border border-0 rounded-5" type="button">SUBMIT</button>
             </div>
@@ -43,7 +47,7 @@
     </div>
   </div>
 
-  
+
 
   <!-- Thank you state start -->
 
