Comnplete without hover

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
       <div class="col-md-12">
         <div class="card rounded-5">
           <div class="card-body">
-            <span class="badge bg-secondary rounded-5 star-icon"><img src="public/images/icon-star.svg"
+            <span class="badge bg-secondary rounded-5 circle-icon"><img src="public/images/icon-star.svg"
                 alt="star icon"></span>
-            <h5 class="card-title">How did we do?</h5>
+            <h3 class="card-title">How did we do?</h3>
             <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated to
               help us improve our offering!</p>
 
             <p class="numbers-for-rating">
-              <span class="badge bg-secondary rounded-5">1</span>
-              <span class="badge bg-secondary rounded-5">2</span>
-              <span class="badge bg-secondary rounded-5">3</span>
-              <span class="badge bg-secondary rounded-5">4</span>
-              <span class="badge bg-secondary rounded-5">5</span>
+              <span class="badge bg-secondary rounded-5 circle-icon n">1</span>
+              <span class="badge bg-secondary rounded-5 circle-icon n">2</span>
+              <span class="badge bg-secondary rounded-5 circle-icon n">3</span>
+              <span class="badge bg-secondary rounded-5 circle-icon n">4</span>
+              <span class="badge bg-secondary rounded-5 circle-icon n">5</span>
             </p>
 
             <div class="d-grid gap-2">
