--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <script src="jquery-3.6.4.min.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="public/images/favicon-32x32.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -25,22 +24,25 @@
       <div class="col-md-12">
         <div class="card rounded-5">
           <div class="card-body">
-            <span class="badge bg-secondary rounded-5 circle-icon"><img src="public/images/icon-star.svg"
+            <span class="badge bg-secondary rounded-5 circle-icon inactive"><img src="public/images/icon-star.svg"
                 alt="star icon"></span>
             <h3 class="card-title">How did we do?</h3>
             <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated to
               help us improve our offering!</p>
 
             <p class="numbers-for-rating">
-              <span onclick="myFunction()" id="circle01" class="badge bg-secondary rounded-5 circle-icon n">1</span>
-              <span id="circle02" class="badge bg-secondary rounded-5 circle-icon n">2</span>
-              <span id="circle03" class="badge bg-secondary rounded-5 circle-icon n">3</span>
-              <span id="circle04" class="badge bg-secondary rounded-5 circle-icon n">4</span>
-              <span id="circle05" class="badge bg-secondary rounded-5 circle-icon n">5</span>
+              <button id="oneStar" class="badge bg-secondary border-0 rounded-5 circle-icon n inactive" required>1</button>
+              <button id="twoStar" class="badge bg-secondary border-0 rounded-5 circle-icon n inactive" required>2</button>
+              <button id="threeStar" class="badge bg-secondary border-0 rounded-5 circle-icon n inactive" required>3</button>
+              <button id="fourStar" class="badge bg-secondary border-0 rounded-5 circle-icon n inactive" required>4</button>
+              <button id="fiveStar" class="badge bg-secondary border-0 rounded-5 circle-icon n inactive" required>5</button>
             </p>
 
-            <div id="btn" class="d-grid gap-2">
-              <button class="btn btn-primary border border-0 rounded-5" type="button">SUBMIT</button>
+            <div id="btn">
+              <form class="d-grid gap-2" action="/" method="post">
+                <button formmethod="post" class="btn btn-primary border border-0 rounded-5"
+                  type="submit">SUBMIT</button>
+              </form>
             </div>
           </div>
         </div>
@@ -59,7 +61,7 @@
 
   <!-- Thank you state end -->
 
-  <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous">
   </script>
