--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <!-- Thank you state end -->
 
-  <script src="js/script.js"></script>
+  <script src="public/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous">
   </script>
