--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="public/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-  <link rel="stylesheet" href="public/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
@@ -19,38 +19,41 @@
 
 <body>
 
-  <div class="container-fluid d-flex justify-content-center align-items-center">
+  <div role="main" class="container-fluid d-flex justify-content-center align-items-center">
     <div class="row">
       <div class="col-md-12">
         <div class="card rounded-5">
           <div class="card-body">
-            <span class="badge bg-secondary rounded-5 circle-icon inactive"><img src="public/images/icon-star.svg"
+            <span class="badge bg-secondary rounded-5 circle-icon inactive"><img src="images/icon-star.svg"
                 alt="star icon"></span>
             <h3 class="card-title">How did we do?</h3>
             <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated to
               help us improve our offering!</p>
 
-            <p class="numbers-for-rating">
-              <button id="oneStar" class="badge bg-secondary border-0 rounded-5 circle-icon n inactive" required>1</button>
-              <button id="twoStar" class="badge bg-secondary border-0 rounded-5 circle-icon n inactive" required>2</button>
-              <button id="threeStar" class="badge bg-secondary border-0 rounded-5 circle-icon n inactive" required>3</button>
-              <button id="fourStar" class="badge bg-secondary border-0 rounded-5 circle-icon n inactive" required>4</button>
-              <button id="fiveStar" class="badge bg-secondary border-0 rounded-5 circle-icon n inactive" required>5</button>
-            </p>
+            <form class="numbers-for-rating" action="/thank-you" method="post">
+              <button type="button" data-rating="1"
+                class="badge bg-secondary border-0 rounded-5 circle-icon n inactive rating-btn">1</button>
+              <button type="button" data-rating="2"
+                class="badge bg-secondary border-0 rounded-5 circle-icon n inactive rating-btn">2</button>
+              <button type="button" data-rating="3"
+                class="badge bg-secondary border-0 rounded-5 circle-icon n inactive rating-btn">3</button>
+              <button type="button" data-rating="4"
+                class="badge bg-secondary border-0 rounded-5 circle-icon n inactive rating-btn">4</button>
+              <button type="button" data-rating="5"
+                class="badge bg-secondary border-0 rounded-5 circle-icon n inactive rating-btn">5</button>
 
-            <div id="btn">
-              <form class="d-grid gap-2" action="/" method="post">
-                <button formmethod="post" class="btn btn-primary border border-0 rounded-5"
-                  type="submit">SUBMIT</button>
-              </form>
-            </div>
+              <input type="hidden" name="rating" id="rating-input" required>
+
+              <div id="btn" class="d-grid gap-2">
+                <button formmethod="post" class="btn btn-primary border border-0 rounded-5" type="submit"
+                  id="submit-btn" disabled>SUBMIT</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-
 
   <!-- Thank you state start -->
 
@@ -61,7 +64,7 @@
 
   <!-- Thank you state end -->
 
-  <script src="public/js/script.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous">
   </script>
