--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="col-md-12">
         <div class="card rounded-5">
           <div class="card-body">
-            <span class="badge bg-secondary rounded-5 circle-icon inactive"><img src="public/images/icon-star.svg"
+            <span class="badge bg-secondary rounded-5 circle-icon inactive"><img src="images/icon-star.svg"
                 alt="star icon"></span>
             <h3 class="card-title">How did we do?</h3>
             <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated to
@@ -56,16 +56,7 @@
     </div>
   </div>
 
-  <!-- Thank you state start -->
-
-  <!--You selected -->
-  <!-- Add rating here  out of 5 -->
-
-  <!--Thank you! We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!-->
-
-  <!-- Thank you state end -->
-
-  <script src="public/js/script.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous">
   </script>
