--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="col-md-12">
         <div class="card rounded-5">
           <div class="card-body">
-            <span class="badge bg-secondary rounded-5 circle-icon inactive"><img src="images/icon-star.svg"
+            <span class="badge bg-secondary rounded-5 circle-icon inactive"><img src="public/images/icon-star.svg"
                 alt="star icon"></span>
             <h3 class="card-title">How did we do?</h3>
             <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated to
